# siyi-sdk

./: CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  classes.html  classsiyi_1_1SiyiClient-members.html  classsiyi_1_1SiyiClient.html  classsiyi_1_1SiyiClient.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_eb9a3e7e8693bf58a3ef2b404a6d8934.html  dir_eb9a3e7e8693bf58a3ef2b404a6d8934.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  siyi__client_8hxx.html  siyi__client_8hxx.js  siyi__client_8hxx_source.html  state_8hxx.html  state_8hxx.js  state_8hxx_source.html  structsiyi_1_1CurrentZoomState-members.html  structsiyi_1_1CurrentZoomState.html  structsiyi_1_1CurrentZoomState.js  structsiyi_1_1FirmwareVersion-members.html  structsiyi_1_1FirmwareVersion.html  structsiyi_1_1FirmwareVersion.js  structsiyi_1_1FirmwareVersionState-members.html  structsiyi_1_1FirmwareVersionState.html  structsiyi_1_1FirmwareVersionState.js  structsiyi_1_1FunctionFeedbackInfoState-members.html  structsiyi_1_1FunctionFeedbackInfoState.html  structsiyi_1_1FunctionFeedbackInfoState.js  structsiyi_1_1GimbalAngle-members.html  structsiyi_1_1GimbalAngle.html  structsiyi_1_1GimbalAngle.js  (+72 more)
docs/latex/: annotated.tex  classsiyi_1_1SiyiClient.tex  files.tex  refman.tex  siyi__client_8hxx.tex  siyi__client_8hxx_source.tex  state_8hxx.tex  state_8hxx_source.tex  structsiyi_1_1CurrentZoomState.tex  structsiyi_1_1FirmwareVersion.tex  structsiyi_1_1FirmwareVersionState.tex  structsiyi_1_1FunctionFeedbackInfoState.tex  structsiyi_1_1GimbalAngle.tex  structsiyi_1_1GimbalAngleState.tex  structsiyi_1_1GimbalConfigInfo.tex  (+22 more)
example/: example1.cxx  manual_control.cxx
src/: crc16.cxx  protocol.cxx  siyi_client.cxx  siyi_client_impl.cxx  siyi_receiver.cxx  siyi_sender.cxx  udp_transport.cxx
test/: CMakeLists.txt  fake_transport.hxx  test_crc16.cxx  test_protocol.cxx  test_receiver.cxx  test_sender.cxx
(+91 files in other folders)
